# test-supporter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  discovery.md  roadmap.md
docs/features/collection/: decisions.md  design.md  requirements.md  roadmap.md  schema.md
docs/features/evaluation/: requirements.md
docs/features/settings/: requirements.md
docs/features/terminal/: requirements.md
docs/process/: README.md
docs/schema/: config.md
src/backend/: CLAUDE.md  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/: collection.py  evaluation.py  settings.py  terminal.py
src/backend/app/core/: config.py
src/backend/app/infra/: archive.py  field_extractor.py  file_copy.py  file_transfer.py  resolver.py  screenshot_name.py  unc_path.py
src/backend/app/schemas/: collection.py  evaluation.py  settings.py  terminal.py
src/backend/app/services/: collection_monitor.py  copy_runner.py  local_pool.py  repository.py
src/backend/config/: sample copy.json  sample.json
src/backend/tests/: test_api_evaluation.py  test_api_settings.py  test_api_terminal.py  test_archive.py  test_collection_api.py  test_collection_schema.py  test_config.py  test_copy_runner.py  test_field_extractor.py  test_file_copy.py  test_file_transfer.py  test_local_pool.py  test_resolver.py  test_screenshot_name.py  test_unc_path.py
src/frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/e2e/: smoke.test.ts
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/components/: AppLayout.tsx
(+10 files in other folders)
