[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<3.15"
dependencies = [
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pandas>=2.0.0",
    "sqlmodel>=0.0.37",
    "aiosqlite>=0.20.0" 
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "alembic>=1.13.0"
]